<resources>
    <string name="app_name">Vxnaid</string>
    <string name="update_version">Downloading app update</string>
    <string name="general_label_na">N/A</string>
    <string name="general_label_close">Close</string>
    <string name="general_label_error">Something went wrong. Please try again.</string>
    <string name="general_label_log_out">Log out</string>
    <string name="general_label_retry">Retry</string>
    <string name="general_label_skip">Skip</string>
    <string name="general_label_back" translatable="false">Back</string>
    <string name="general_label_submit">Submit</string>
    <string name="general_label_cancel">Cancel</string>
    <string name="general_label_done">Done</string>
    <string name="general_label_confirm">Confirm</string>
    <string name="general_label_continue">Continue</string>
    <string name="general_label_save">Save</string>
    <string name="general_label_restart_workflow">Restart Workflow</string>
    <string name="general_label_ok">OK</string>
    <string name="generate_Qr_code">Generate QR Code</string>
    <string name="general_label_yes">Yes</string>
    <string name="general_label_no">No</string>
    <string name="general_label_update">Update</string>
    <string name="general_label_cancel_setup">Exit Setup Wizard</string>
    <string name="general_label_continue_setup">Continue Setup</string>
    <string name="update_error_no_network">No network connection available. Please connect to the internet. If download is in progress, it will be resumed automatically.</string>
    <string name="login_label_intro">Welcome operator, please login below to get started:</string>
    <string name="login_label_sign_in">Sign in</string>
    <string name="login_label_username">Username</string>
    <string name="login_label_password">Password</string>
    <string name="login_label_visit_location_hint">Select visit place</string>
    <string name="login_label_attached_clinic_hint">Select attached clinic</string>
    <string name="login_label_attached_clinic_validation_error">Please select an attached clinic</string>
    <string name="login_label_visit_outreach_hint" translatable="false">Type Outreach name</string>
    <string name="settings_label_backend_url">Backend URL</string>
    <string name="settings_label_licenses">Biometric Licenses</string>
    <string name="settings_label_deviceId">Device ID</string>
    <string name="settings_label_no_licenses">No active licenses</string>
    <string name="settings_label_deactivate">Deactivate</string>
    <string name="settings_msg_no_network_cannot_deactive">Cannot deactivate licenses without a network connection.</string>
    <string name="settings_msg_no_network_cannot_activate">Cannot activate licenses without a network connection.</string>
    <string name="settings_msg_error_cannot_activate">Cannot activate licenses.</string>
    <string name="settings_msg_error_cannot_deactivate">Cannot deactivate licenses.</string>
    <string name="settings_msg_error_cannot_activate_some_licenses">Some licenses could not be obtained. Please try activating them again.</string>
    <string name="settings_msg_copied_deviceID">Device ID copied to clipboard</string>
    <string name="settings_label_settings">Settings</string>
    <string name="settings_label_activate">Activate</string>
    <string name="settings_label_setup">Setup</string>
    <string name="settings_label_rerun_wizard">Re-run Setup Wizard</string>
    <string name="settings_label_sync_now">Sync Now</string>
    <string name="settings_label_share_logs" translatable="false">Share Logs</string>
    <string name="settings_label_clear_logs" translatable="false">Clear Logs</string>
    <string name="update_label_title">Update Application</string>
    <string name="update_label_description">A new update is available for the application. Please update as soon as possible.</string>
    <string name="update_label_current_version">Current Version: %s</string>
    <string name="update_label_new_version">Latest Version: %s</string>
    <string name="update_label_downloading">Downloading (%s)</string>
    <string name="update_error_version_check">Error retrieving latest application version</string>
    <string name="update_error_downloading">Error while downloading application file</string>
    <string name="login_label_more_information">Note: You need login credentials provided by your administration. It is not possible to register an account or reset a password through this app.</string>
    <string name="login_label_error">Login failed. Please try again.</string>
    <string name="login_label_error_offline">Login failed. Operator username not present in offline database, credentials may have expired. Network connection required to log in again with this username.</string>
    <string name="login_label_error_sync_admin_role_not_allowed">You\’re not allowed to login here as a Sync Admin. Please login via the setup wizard.</string>
    <string name="login_label_error_opertor_role_not_allowed">You\’re not allowed to login here as an Operator. Please login via the operator login screen.</string>
    <string name="login_label_error_opertor_role_required">You must be an Operator to login here.</string>
    <string name="login_label_error_sync_admin_role_required">You must be a Sync Admin to login here.</string>
    <string name="login_label_error_not_authenticated">Login failed (unauthenticated). Please try again.</string>
    <string name="login_label_error_location_not_assigned">You are not allowed to log in to this location.</string>
    <string name="login_label_validation_no_username">Please enter your username</string>
    <string name="login_label_validation_no_password">Please enter your password</string>
    <string name="login_label_validation_no_visit_place">Please select visit place</string>
    <string name="login_label_validation_no_outreach_name" translatable="false">Please enter an outreach name</string>
    <string name="confirm_visit_place_title">Please Confirm Location</string>
    <string name="confirm_visit_place_message">You selected: %1$s\n\nDo you want to proceed?</string>
    <string name="confirm_visit_place_message_with_outreach">You selected: %1$s\n\nOutreach Name: %2$s\n\nDo you want to proceed?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="login_label_validation_no_backend_url">Please enter a valid backend URL</string>
    <string name="dialog_login_title">Session expired</string>
    <string name="dialog_login_description">Your session has expired. Please enter your operator password to sign in again, or terminate the current session.</string>
    <string name="dialog_login_btn_terminate">Terminate session</string>
    <string name="dialog_login_btn_renew">Renew login</string>
    <string name="site_selection_title">Welcome operator</string>
    <string name="site_selection_description">Please find and select your site location from the list below to get started:</string>
    <string name="site_selection_input_hint">Select site location</string>
    <string name="site_selection_btn_submit">Submit</string>
    <string name="site_selection_error_no_site_selected">Please select a site</string>
    <string name="match_or_register_patient_welcome">Welcome %1$s to %2$s%3$s</string>
    <string name="match_or_register_patient_step_id_card">Child ID or QR-Code</string>
    <string name="match_or_register_patient_step_phone">Phone number</string>
    <string name="match_or_register_patient_step_iris_scan">Iris scan the Child\'s eye(s)</string>
    <string name="match_or_register_patient_step_identify">Enter Mother\'s Name</string>
    <string name="match_or_register_patient_step_visit">Follow-up on Child\'s visits</string>
    <string name="match_or_register_patient_step_index">Option %s</string>
    <string name="match_or_register_patient_btn_continue">Complete Return Visit </string>
    <string name="match_or_register_patient_intro">Please select a child identification option</string>
    <string name="complete_return_visit_title" translatable="false">Return To Visit Guide</string>
    <string name="match_or_register_patient_intro_title">Home Page</string>
    <string name="iris_scan_left_title">Iris scan - Left eye</string>
    <string name="iris_scan_right_title">Iris scan - Right eye</string>
    <string name="participant_matching_title">Child matching</string>
    <string name="visits_overview_client_mothers_name_column_label">Mother\'s Name</string>
    <string name="eye_title" translatable="false">e</string>
    <string name="participant_flow_child_number_title">Child Number</string>
    <string name="participant_flow_participant_id_title">Child ID</string>
    <string name="participant_flow_participant_id_hint">Scan Child ID QR Code</string>
    <string name="participant_flow_participant_id_scanned">The format of the ID is not supported</string>
    <string name="participant_flow_participant_id_description">Please scan the Child vaccination card with a QR-Code or manually enter the Child ID number:</string>
    <string name="participant_flow_participant_id_label_manual_entry">Child\'s ID OR QR-Code</string>
    <string name="participant_flow_participant_id_input_hint">Please enter the child\'s ID</string>
    <string name="participant_flow_participant_id_label_or">- OR -</string>
    <string name="participant_flow_participant_id_label_scan_code">Scan QR-Code</string>
    <string name="participant_flow_phone_title">Mobile Phone Number</string>
    <string name="participant_flow_phone_description">Please enter a phone number</string>
    <string name="participant_flow_no_phone_description">Please confirm that the Child has no mobile phone. This will significantly increase the matching time.</string>
    <string name="participant_flow_mother_name_page_title">Mother\'s name</string>
    <string name="participant_flow_mother_name_label" translatable="false">Mother\'s name</string>
    <string name="participant_flow_mother_name_hint" translatable="false">Please enter either the mother\'s first or last name or both names</string>
    <string name="iris_scan_icon_description">Icon of iris scan</string>
    <string name="iris_scan_intro_right">Please scan the Child\'s RIGHT eye</string>
    <string name="iris_scan_intro_left">Please scan the Child\'s LEFT eye</string>
    <string name="iris_scan_glasses_description">Image of glasses</string>
    <string name="iris_scan_label_capture">Capture Iris</string>
    <string name="iris_scan_label_load_image">Load Image</string>
    <string name="visits_overview_start_date_label">Start Date</string>
    <string name="visits_overview_end_date_label">End Date</string>
    <string name="visits_overview_not_set_label">Not set</string>
    <string name="visits_overview_download_excel_button_label">Download Excel</string>
    <string name="not_set">Not set</string>
    <string name="chp_col_dose">Dose</string>
    <string name="chp_col_location">Location</string>
    <string name="chp_col_6_11_m">6–11M\nMale</string>
    <string name="chp_col_6_11_f">6–11M\nFemale</string>
    <string name="chp_col_12_59_m">12–59M\nMale</string>
    <string name="chp_col_12_59_f">12–59M\nFemale</string>
    <string name="chp_col_5_14_m">5–14Y\nMale</string>
    <string name="chp_col_5_14_f">5–14Y\nFemale</string>
    <string name="chp_col_total">Total</string>
    <string name="child_health_plus_service_selection_title">Select Services</string>
    <string name="child_health_plus_service_selection_description">Select one or more services for this client</string>
    <string name="child_health_plus_add_another_service">Add Another Service</string>
    <string name="child_health_plus_selected_services">Selected Services:</string>
    <string name="child_health_plus_past_services_header">Services Already Received</string>
    <string name="child_health_plus_past_services_none">No previous services recorded</string>
</resources>